<resources>
    <string name="app_name">FPChecker</string>

    <string name="dialog_action_ok">OK</string>
    <!--<string name="dialog_action_cancel">Cancel</string>-->
    <string name="dialog_error_title">Sorry</string>

    <string name="error_invalid_password">Invalid password</string>
    <string name="error_invalid_username">Invalid username</string>

    <string name="error_login">Error in login</string>
    <string name="retry">Retry</string>
    <string name="action_logout">Logout</string>
    <string name="action_refresh">Refresh</string>

    <!-- Detail Activity -->
    <!--<string name="text_pokemon_id">Id: %s</string>-->
    <!--<string name="text_pokemon_name">Name: %s</string>-->
    <!--<string name="text_pokemon_experience">Experience: %s</string>-->

    <!-- Error View -->
    <string name="error_title">Oops</string>
    <string name="error_message">There was a problem loading the pokemon, please try again!</string>
    <string name="error_reload">Reload</string>
    <string name="title_activity_maps_sample">Map</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="freedompop_logo_description">Freedompop Logo</string>
    <string name="notification_title">Freedompop Usage Alert</string>
    <string formatted="false" name="notification_content">Data usage: %d/%d MB</string>
    <string name="you_must_login">You must login</string>
    <string name="refresh">Refresh</string>
    <string formatted="false" name="left_string">%d/%d MB (%d%% left)</string>


</resources>
