<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <!-- Header Widget -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/primary_light"
        android:gravity="center_vertical|left"
        android:orientation="horizontal"
        android:padding="3dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="2dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/primary_dark" />
    </LinearLayout>
    <!-- Finish header widget -->
    <!-- Widget body -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/widget_padding">
        <!-- Login View -->
        <LinearLayout
            android:id="@+id/loginView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@color/primary"
                android:text="@string/you_must_login"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/white" />
        </LinearLayout>
        <!-- finish login view -->
        <LinearLayout
            android:id="@+id/widgetBody"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible"
            android:weightSum="1">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.7"
                android:orientation="vertical"
                android:visibility="visible"
                android:padding="5dp"
                android:weightSum="1">


                <TextView
                    android:padding="5dp"
                    android:id="@+id/textUsage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/left_string"
                    android:textColor="@color/primary_dark" />

                <ProgressBar
                    android:id="@+id/progressUsage"
                    android:progressDrawable="@drawable/custom_progress"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:progress="50" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:orientation="vertical"
                android:visibility="visible"
                android:weightSum="1">

                <Button
                    android:background="@color/primary"
                    android:textColor="@color/white"
                    android:id="@+id/refreshButton"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/refresh" />

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</LinearLayout>